Development
	Make C return controls panel to proper height
	Hide playlist if started with controlid
	New bitrate detector, based on mencoder
	Show current / total items in title bar when playlist has more than 1 item in it
	Memleak hunting
	Enable list reordering with single call, cool
	Rework drag and drop, when dragging and dropping to window file is played immediately,
		when dragging and dropping to playlist file is added to playlist. Playlist is never cleared.
	Implement moving media files up and down the playlist
	Allow column resize in playlist viewer
	Updated Korean translation by ByeongSik Jeon
	In playlist, set subtitles to be loaded from same directory as video file by default.
	Make control box reappear when going out of fullscreen using only keyboard
	Make control box slide away when fullscreen.
	Make "Set Subtitle" option actually work
	Couple of minor changes to the Set Subtitle code
	Updated French translation from Starcrasher
	Make the OSD level change on the fly when selecting it in the preferences page
	When selecting OSD Level, use words rather than numbers to display level
	Popup warning if we can't load the subtitle file
	Add "Edit->Set Subtitle" menu in
	Update License text on About box
	Handle "Unable to open DVD" messages and give warning to display
	Add some stuff to the About dialog
	Fix some translation items
	Rework File Menu a little bit
	Restore playlist visibility when coming out of fullscreen
	Handle dbus messages from /org/gnome/SettingsDaemon/MediaKeys
	Switch softvol from gint to gboolean
	Update schema to provide missing forcecache and softvol options
	Make File->Details data have only values of active media
	Make File->Details sensitive when Media Data becomes available
	Document Keyboard Shortcuts in file DOCS/keyboard_shortcuts.txt
	Updated French Translation
	Fix install code so that it works during an rpmbuild
	Fix install code so that gnome-mplayer.schema is properly installed when installing from source